--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>strona</title>
 
+    <link rel="stylesheet" type="text/css" href="css.css">
+
+</head>
+  <script>
+    alert("witaj na stronie");
+    var imie = prompt("Podaj imie");
+
+    if (confirm("jestes pełnoletni")) {
+        alert("wybrano opcje: TAK")
+}
+    else{
+        alert("Wybrano opcje: NIE");
+    }
+  </script>
+
+<body>
+  <div class="txt"></div><h1>Strona Internetowa</h1></body></div>
+    
+</body>
+</html>
